--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					</form>-->
 						<a href="#board" data-role="button" id='home-rehearsal'>Go!</a>
 						<a href='#' data-role='button' onclick='signOff()'>Sign Off</a>
-						<!--<a href='#' data-role='button' onclick='deleteAllStories()'>Delete</a>-->
+						<a href='#' data-role='button' onclick='deleteAllStories()'>Delete</a>
 						<div id='rehearsalReminder'>
 							<div id='urgentRehearsal'></div>
 							<div id='regularRehearsal'></div>
