--- a/43story.html
+++ b/43story.html
@@ -22,7 +22,11 @@
 		<script src='appConstants.js'></script>
 		<script src="memoryGame.js"></script>
 		<script src='recoverPage.js'></script>
+		<script src='setFamily.js'></script>
+		<script src='accountPage.js'></script>
 		<script src='storyMode.js'></script>
+		<script src='programVariables.js'></script>
+		<!--<script src="AccountPage.js"></script>-->
 
 		<!-- style sheets kendo jquery own -->
 		<link rel='stylesheet' href='kendo.common.min.css'/>
@@ -172,11 +176,11 @@
 				<form method='GET' id='addStoryForm'></form>
 			</div>
 		</div>
-		<div data-role='page' data-title='gameForget' id='gameForget'>
+		<div data-role='page' data-title='forgetPage' id='forgetPage'>
 			<div data-role='header'><h1>Memory Game Hint</h1></div>
 			<div data-role='content'>
 				<div id='hintSpace'></div>
-				<a data-role='button' onclick='backtoGame()'>Back to Game</a>
+				<a data-role='button' onclick='memoryGame.backtoGame()'>Back to Game</a>
 			</div>
 		</div>
 		<div data-role='page' data-title='Randomness Generator' id='generateRandomness'>
@@ -203,5 +207,33 @@
 			<button id='submitRecovery' type='submit' value='submit' name='submit' tabindex="2" onclick='recoveryMechanism.gatherUserInput(2)'>Recover!</button>
 		</div>
 
+		<!-- ACCOUNT PAGE -->
+		<div data-role="page" data-title="accounts" id="accounts">
+			<div data-role="header">
+				<div data-role='navbar'>
+					<ul class='menu'>
+						<li><a class='logo' href='#board'><img src="box_logo.jpg" alt="logo"/></a></li>
+						<li><a href='#bank' id='accounts-bank'>STORY BANK</a></li>
+						<li><a href='#accounts' class='click' id='accounts-accounts'>ACCOUNTS</a></li>
+						<li><a href='#game' id='accounts-game' >GAME</a></li>
+					</ul>
+				</div>
+			</div>
+			<div data-role="content">
+				<div data-role='fieldcontain'>
+					<form action='#' id='accountsList'>
+						<div>
+							<input type='text' name='accountName' id='accountName' value='' placeholder='Enter Website' autofocus/> 
+						</div><!--
+						<fieldset data-role="controlgroup">
+							<input type="checkbox" name="checkbox-2" id="checkbox-2" class="custom" />
+							<label for="checkbox-2">use my own photos</label>
+        				</fieldset>-->
+        				<input type="submit" name="submit" value="Add" id='submitbutton'></input>
+					</form>
+				</div>
+				<ul id='list' data-role='listview' data-inset='true'></ul>
+			</div>
+		</div>
 	</body>
 </html>
