--- a/43story.html
+++ b/43story.html
@@ -200,7 +200,7 @@
 				<a href='#bank' data-icon='back'>Back</a>
 				<h1>Story Recovery</h1>
 			</div>
-			<div data-role="content">
+			<div data-role="content" class='non-half'>
 				<div id="groupStories">
 				</div>
 			</div>
