fix recover page css and add a comment

--- a/43story.html
+++ b/43story.html
@@ -201,6 +201,7 @@
 				<h1>Story Recovery</h1>
 			</div>
 			<div data-role="content" class='non-half'>
+				<p>Please input at least five stories. &nbsp; However, only the first five will be used.</p>
 				<div id="groupStories">
 				</div>
 			</div>
