passing index into gatherUserInput

--- a/43story.html
+++ b/43story.html
@@ -205,7 +205,8 @@
 				<div id="groupStories">
 				</div>
 			</div>
-			<button id='submitRecovery' type='submit' value='submit' name='submit' tabindex="2" onclick='recoveryMechanism.gatherUserInput(2)'>Recover!</button>
+			<button id='submitRecovery' type='submit' value='submit' name='submit' tabindex="2" onclick='recoveryMechanism.gatherUserInput(' + 
+																										recoveryMechanism.missingStoryIndex + ')'>Recover!</button>
 		</div>
 
 		<!-- ACCOUNT PAGE -->
