--- a/43story.html
+++ b/43story.html
@@ -2,8 +2,6 @@
 <html>
 	<head>
 		<title>Password Manager</title>
-		<meta http-equiv="Content-Type" content="text/html;charset=windows-1252" >
-
 		<!-- src dropbox jquery kendo-->
 		<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 		<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css"/>
@@ -44,9 +42,9 @@
 		<link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css' />
 		<link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet' type='text/css'>
 		<!-- phone gap stuff meta?-->
-		<!--<meta charset="utf-8"/>-->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0 minimum-scale=1.0 user-scalable=0"/> 
-		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta charset="utf-8"/>
+		<!--<meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0 minimum-scale=1.0 user-scalable=0"/> 
+		<meta name="apple-mobile-web-app-capable" content="yes" />-->
 	</head>
 	<body>
 		<!-- # of Accounts & Security-Usability Scale Page -->
