--- a/43story.html
+++ b/43story.html
@@ -5,7 +5,7 @@
 		<!-- src dropbox jquery kendo-->
 		<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 		<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css"/>
-		<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>-->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 
 		<script src="https://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
 		<script src="https://www.dropbox.com/static/api/dropbox-datastores-1.0-latest.js"></script>
@@ -42,7 +42,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css' />
 		<link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet' type='text/css'>
 		<!-- phone gap stuff meta?-->
-		<meta charset="utf-8"/>
+		<!--<meta charset="utf-8"/>-->
 		<!--<meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0 minimum-scale=1.0 user-scalable=0"/> 
 		<meta name="apple-mobile-web-app-capable" content="yes" />-->
 	</head>
