--- a/jBcrypt/example.html
+++ b/jBcrypt/example.html
@@ -1,8 +1,10 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html;charset=windows-1252" >
 <head>
+<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="isaac.js" type="text/javascript"></script>
 <script src="bCrypt.js" type="text/javascript"></script>
+<script src='re.js'></script>
 
 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
 <script src="http://code.jquery.com/jquery-1.5.1.min.js" type="text/javascript"></script>
