new recovery moduule

--- a/43story.html
+++ b/43story.html
@@ -205,7 +205,7 @@
 				<div id="groupStories">
 				</div>
 			</div>
-			<button id='submitRecovery' type='submit' value='submit' name='submit' tabindex="2" onclick='recoveryMechanism.gatherUserInput()'>Recover!</button>
+			<button id='submitRecovery' type='submit' value='submit' name='submit' tabindex="2" onclick='recoveryMechanism.startRecovery()'>Recover!</button>
 		</div>
 
 		<!-- ACCOUNT PAGE -->
