fix html recoveryM.js

--- a/43story.html
+++ b/43story.html
@@ -21,7 +21,7 @@
 		<!-- OWN -->
 		<script src='appConstants.js'></script>
 		<script src="memoryGame.js"></script>
-		<script src='recoverPage.js'></script>
+		<script src='recoveryMechanism.js'></script>
 		<script src='setFamily.js'></script>
 		<script src='accountPage.js'></script>
 		<script src='programVariables.js'></script>
