--- a/43story.html
+++ b/43story.html
@@ -47,6 +47,25 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />-->
 	</head>
 	<body>
+		<div data-role='page' data-title="board" id="board">
+			<div data-role="header">
+				<div data-role='navbar'>
+					<ul class='menu'>
+						<li><a class='logo' href='#' class='click'><img src="box_logo.jpg" alt="logo"/></a></li>
+						<li><a href='#bank' id='board-bank'>STORY BANK</a></li>
+						<li><a href='#accounts' id='board-accounts'>ACCOUNTS</a></li>
+						<li><a href='#game' id='board-game' >GAME</a></li>
+					</ul>
+				</div>
+			</div>
+			<div data-role="content">
+				<div id='board-msg'>
+					<div>Urgent Reherals</div>
+					<hr>
+					<div>Rehersals </div>
+				</div>
+			</div>
+		</div>
 		<!-- # of Accounts & Security-Usability Scale Page -->
 		<div data-role='page' data-title='userSelect' id='userSelect'>
 			<div data-role="header">
