include new module

--- a/43story.html
+++ b/43story.html
@@ -24,6 +24,7 @@
 		<script src='recoveryMechanism.js'></script>
 		<script src='setFamily.js'></script>
 		<script src='accountPage.js'></script>
+		<script src='rehearsalModule.js'></script>
 		<script src='programVariables.js'></script>
 		<script src='storyMode.js'></script>
 		<!--<script src="AccountPage.js"></script>-->
